--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "javascript-tamagotchi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.html",
+  "main": "server.ts",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec ts-node server.ts"
+    "start": "nodemon --exec tsx server.ts"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +25,7 @@
     "@types/ws": "^8.5.14",
     "nodemon": "^3.0.1",
     "ts-loader": "^9.5.2",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.3"
   }
 }
